# -----------------------------------------------------------------------------
# Adding test files
# -----------------------------------------------------------------------------

add_subdirectory(base)
add_subdirectory(base_2d)
add_subdirectory(base_3d)
add_subdirectory(silo)

add_subdirectory(new_features)

# -----------------------------------------------------------------------------
